tests/paczka1/small_fuzzy/93758312.err
Error in line 3: zQTnGNwt S20 30,3
Error in line 1: lqFW A91 7,7
Error in line 12: XOzBWuWD5Lz A794 92,93
